--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "dropzone": "^6.0.0-beta.1",
+        "pretty-bytes": "^5.6.0",
         "three": "^0.134.0",
         "vue": "^3.2.22",
         "vuex": "^4.0.2"
