--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "dependencies": {
         "dropzone": "^6.0.0-beta.1",
+        "monaco-editor": "^0.30.1",
+        "monaco-editor-webpack-plugin": "^6.0.0",
         "pretty-bytes": "^5.6.0",
         "three": "^0.134.0",
         "vue": "^3.2.22",
